--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>GFT test</title>
+    <title>Component test</title>
     <script src="js/index.js" type="text/javascript"></script>
   </head>
   <body>
