--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>Component test</title>
-    <script src="js/index.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
   </head>
   <body>
-    <componente-tonto></componente-tonto>
+    <dumb-component></dumb-component>
   </body>
 </html>
